Bug 1444301 - Add spacing around separator at end of toolbox; r=jryans
Also adds spacing to the end of the toolbox too.

MozReview-Commit-ID: 2Dkiu1MHGBj

UltraBlame original commit: c5e2ad71fce5c66704ce41fc9905f902aa8fba10

--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -1103,6 +1103,47 @@ controls
 #
 toolbox
 -
+controls
+{
+margin
+-
+right
+:
+3px
+;
+}
+#
+toolbox
+-
+buttons
+-
+end
+>
+.
+devtools
+-
+separator
+{
+margin
+-
+inline
+-
+start
+:
+5px
+;
+margin
+-
+inline
+-
+end
+:
+5px
+;
+}
+#
+toolbox
+-
 close
 :
 :
